dependency-manager: using project version for concord-client v1 (#867)